--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -203,3 +203,12 @@ code {
 .navds-alert__wrapper--maxwidth {
   max-width: 100% !important;
 }
+
+.background-image {
+  background-image: url('/cloudy.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
