fix h2 with override tailwind style

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -21,6 +21,10 @@
   }
 }
 
+.navds-heading--small {
+  font-size: var(--a-font-size-heading-small) !important;
+}
+
 .explore-header > h1 {
   @apply hover:underline selection:underline;
 }
