chore(deps): changes due to bumping @types/react and react-markdown

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -25,6 +25,10 @@
   font-size: var(--a-font-size-heading-small) !important;
 }
 
+.navds-heading--xlarge {
+  font-size: var(--a-font-size-heading-xlarge) !important;
+}
+
 .explore-header > h1 {
   @apply hover:underline selection:underline;
 }
